[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Scripting/ScriptingNode.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/scripting_node_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/font_12_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/scripting/info.png" type="Texture" id=4]
[ext_resource path="res://assets/themes/font_10_regular.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=6]
Label/fonts/font = ExtResource( 3 )

[sub_resource type="Theme" id=8]
Label/fonts/font = ExtResource( 5 )

[node name="ScriptingNode" type="GraphNode"]
margin_right = 160.0
margin_bottom = 34.0
rect_min_size = Vector2( 160, 0 )
theme = ExtResource( 2 )
custom_constants/port_offset = 0
custom_constants/separation = 4
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
tag = "Titulo"
subtag = "Subtitulo"

[node name="TitleMC" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="TitleMC"]
margin_right = 158.0
margin_bottom = 39.0

[node name="TitleMC" type="MarginContainer" parent="TitleMC"]
margin_right = 158.0
margin_bottom = 39.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TitleHBC" type="HBoxContainer" parent="TitleMC/TitleMC"]
margin_left = 4.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 35.0
custom_constants/separation = 8

[node name="TitleIcon" type="TextureRect" parent="TitleMC/TitleMC/TitleHBC"]
margin_right = 16.0
margin_bottom = 31.0
rect_min_size = Vector2( 16, 24 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMC/TitleMC/TitleHBC"]
margin_left = 24.0
margin_right = 67.0
margin_bottom = 31.0
size_flags_vertical = 6
custom_constants/separation = 0

[node name="TitleLabel" type="Label" parent="TitleMC/TitleMC/TitleHBC/VBoxContainer"]
margin_right = 43.0
margin_bottom = 17.0
theme = SubResource( 6 )
text = "Titulo"

[node name="SubtitleLabel" type="Label" parent="TitleMC/TitleMC/TitleHBC/VBoxContainer"]
margin_top = 17.0
margin_right = 43.0
margin_bottom = 31.0
theme = SubResource( 8 )
text = "Subtitulo"

[node name="InfoBtn" type="Button" parent="TitleMC/TitleMC/TitleHBC"]
margin_left = 126.0
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 10
size_flags_vertical = 2
icon = ExtResource( 4 )
flat = true
icon_align = 1
expand_icon = true
